gitops/apps/rhcl-demo/base/resources/39-httproute-external-proxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-proxy
  namespace: demo
  labels:
    app: external-proxy
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: rhcl-gw
      namespace: openshift-ingress
  rules:
    - matches:
        - method: GET
          path:
            type: PathPrefix
            value: /external
      backendRefs:
        - group: ""
          kind: Service
          name: external-proxy
          port: 80
          weight: 1
